# oh-matilda-desktop

./: .env.example  .gitignore  AGENTS.md  Makefile  package-lock.json  package.json  pyproject.toml
backend/: agent_cli.py  agent_search.py  agent_test.py
backend/docker/: docker-compose.yml
docker/: docker-compose.yml
matilda_desktop/: __init__.py  cli.py  tools.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/matilda_desktop/: agent.py
