[project]
name = "matilda-desktop"
version = "0.1.0"
description = "Offline-local deep agent powered by Gemma 4 via llama.cpp"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-community>=0.4",
]

[project.scripts]
matilda = "matilda_desktop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["matilda_desktop*"]
